k8s/overlays/development/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: material-purchase-api
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
